add delete food api
